Fixed some layout/spacing

--- a/puzzles.css
+++ b/puzzles.css
@@ -3,11 +3,11 @@
 }
 
 .puzzle-link-col {
-    width: 35%;
+    width: 30%;
 }
 
 .answer-checker-col {
-    width: 55%;
+    width: 60%;
 }
 
 .solution-link-col {
